# brics_research_camp

./: .gitmodules
care-o-bot-team-1/: task1poses.yaml
care-o-bot-team-1/cob_follow/: .cproject  .project  CMakeLists.txt  follow.cpp  mainpage.dox  manifest.xml
care-o-bot-team-1/cob_mmcontroller/: CMakeLists.txt
care-o-bot-team-1/cob_mmcontroller/src/: cob_mmcontroller.cpp  cob_mmsync.cpp
care-o-bot-team-1/cob_mmsync/: CMakeLists.txt  cob_mmsync.cpp  mainpage.dox
care-o-bot-team-1/dual_arm_relay/: CMakeLists.txt  frames.gv  mainpage.dox  manifest.xml
care-o-bot-team-1/dual_arm_relay/src/: relay.cpp
care-o-bot-team-1/get_poses/: CMakeLists.txt  get.cpp  mainpage.dox  run.launch
care-o-bot-team-1/move_to/: CMakeLists.txt  README  RobotComponents.h  Sequencer.py  base_poses.yaml  lbr_positions.yaml  manifest.xml  move.cpp  planDemo.py  task1.py  upload_params.launch
care-o-bot-team-1/ompl_new/: CMakeLists.txt  Makefile  Makefile.ompl  Makefile.params  README  console.patch  manifest.xml
care-o-bot-team-1/record_sequence/: CMakeLists.txt  config.yaml  manifest.xml  record.cpp  run.launch
care-o-bot-team-1/test_planning/: CMakeLists.txt  mainpage.dox  manifest.xml  plan.cpp
care-o-bot-team-1/test_planning/srv/: ComputeArmPlan.srv
youbot-driver/: install.sh  run-master.sh
youbot-driver/memmoyMappedFilesAndSemaphore/: CMakeLists.txt
youbot-driver/memmoyMappedFilesAndSemaphore/example/: CMakeLists.txt  maps.cpp  mapt.cpp
youbot-driver/memmoyMappedFilesAndSemaphore/include/: MemoryMappedFiles.h  SemaphoreLock.h
youbot-driver/memmoyMappedFilesAndSemaphore/src/: MemoryMappedFiles.cpp  SemaphoreLock.cpp
youbot-driver/testProgs/ApiTest/: CMakeLists.txt  armDriver.cpp  armDriverYouBot3.cpp  youBotApiTest.cpp
youbot-driver/testProgs/YouBot3/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  Manipulator.cpp  Manipulator.h  Test.cpp  Test.h  YouBot3Test  YouBotArm.cpp  YouBotArm.h  armDriverYouBot3.cpp
youbot-driver/testProgs/YouBot3/Debug/: Manipulator.d  Test.d  YouBotArm.d  armDriverYouBot3.d  makefile  sources.mk  subdir.mk
youbot-driver/testProgs/youBotPositionControl/: .cproject  .project  CMakeLists.txt  youBotPositionControl.cpp
youbot-driver/youBotApi/: CMakeLists.txt
youbot-driver/youBotApi/include/: youBotApi.h
youbot-driver/youBotApi/src/: youBotApi.cpp
youbot-driver/youBotDriver/: CMakeLists.txt
youbot-driver/youBotDriver/src/soemEtherCatCore/: ethercatbase.c  ethercatbase.h  ethercatcoe.c  ethercatcoe.h  ethercatconfig.c  ethercatconfig.h  ethercatconfiglist.h  ethercatdc.c  ethercatdc.h  ethercatfoe.c  ethercatfoe.h  ethercatmain.c  ethercatmain.h  ethercatprint.c  ethercatprint.h  ethercatsoe.c  ethercatsoe.h  ethercattype.h  nicdrv.c  nicdrv.h
youbot-driver/youBotDriver/src/soemEtherCatMaster/: soem_master.h
youbot-driver/youBotJoypadApp/: CMakeLists.txt  youBotJoypadApp.cpp
youbot-driver/youBotMasterApp/: CMakeLists.txt  youBotMasterApp.cpp
youbot-driver/youBotMasterApp/EtherCatSlaves/: youBotArm.cpp  youBotArm.h  youBotSlaveComponent.cpp  youBotSlaveComponent.h
youbot-driver/youBotMasterApp/EtherCatSlaves/messages/: youBotArmMsg.h  youBotSlaveMsg.h
youbot-driver/youBotPerception/iav_legtrack/: CMakeLists.txt  laser_filter_config.yaml  mainpage.dox  manifest.xml
youbot-driver/youBotPerception/iav_legtrack/cfg/: IAVLegTrack.cfg  IAVLegTrack.cfgc  rviz_arc_detection.vcg  rviz_arc_detection2.vcg
youbot-driver/youBotPerception/iav_legtrack/docs/: IAVLegTrackConfig-usage.dox  IAVLegTrackConfig.dox  IAVLegTrackConfig.wikidoc
youbot-driver/youBotPerception/iav_legtrack/include/iav_legtrack/: IAVLegTrackConfig.h
youbot-driver/youBotPerception/iav_legtrack/launch/: arc_detection.launch  arc_detection_test.launch  laser_filter.launch
youbot-driver/youBotPerception/iav_legtrack/src/applications/: arc_detection.cpp  arc_detection_bu.cpp
youbot-driver/youBotPerception/iav_legtrack/src/miarn/: Makefile  README  feature_geometry.cpp  feature_geometry.hpp  (+5 more)
youbot-driver/youBotPerception/usb_camera_info_publisher/: CMakeLists.txt  mainpage.dox  manifest.xml
youbot-driver/youBotPerception/usb_camera_info_publisher/launch/: usb_cam_info_publisher.launch
youbot-driver/youBotPerception/usb_camera_info_publisher/src/: usb_cam_info_publisher.cpp
youbot-driver/youBotPerception/youbot_launchfiles/: mainpage.dox  manifest.xml
youbot-driver/youBotPerception/youbot_launchfiles/cfg/: ar_marker_visualization.vcg  scaner_slam_visualization.vcg  scaner_visualization.vcg
youbot-driver/youBotPerception/youbot_launchfiles/launch/: ar_pose_cob_cam.launch  ar_pose_usb_cam.launch  ar_pose_uvc_cam.launch  ar_pose_uvc_cam2.launch  hal.launch  hokuyo_scanner.launch  iav_arc_pose_standalone.launch  iav_arc_pose_with_laser.launch  logitech_webcam.launch  odom_esimate.launch  slam_test.launch
youbot-driver/youbot_hal/: .cproject  .project  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
youbot-driver/youbot_hal/msg/: youbot_movement_command.msg
youbot-driver/youbot_hal/src/: youbot_hal.cpp  youbot_hal.h  youbot_joy.cpp
youbot-team3/basedriver/: CMakeLists.txt  YouBotMotorDriver.h  YouBotOmniBaseDriver.cpp  YouBotOmniBaseDriver.h  test.cpp
youbot-team3/ros-pkg/youbot_model/: CMakeLists.txt  manifest.xml
youbot-team3/ros-pkg/youbot_model/launch/: robot_publisher.launch
youbot-team3/ros-pkg/youbot_model/mesh/: arm0.stl  arm1.stl  arm2.stl  arm3.stl  arm4.stl  base.stl  finger.stl  wheel.stl
youbot-team3/ros-pkg/youbot_model/src/: jointpublisher.cpp
youbot-team3/ros-pkg/youbot_model/urdf/: youbot.urdf
youbot/orocos/youbot/: .cproject  .project  CMakeLists.txt  Makefile  bot.xml  botmachine.osd  cartesian-component.cpp  cartesian-component.hpp  jointspace-component.cpp  jointspace-component.hpp  manifest.xml  orocos-youbot.pc.in  supervisor-component.cpp  testmove.ops  youbot-api-component.cpp  youbot-api-component.hpp  youbot-component.cpp  youbot-component.hpp  youbot_chain.cpp  youbot_chain.hpp
youbot_kinematics/: CMakeLists.txt  mainpage.dox  manifest.xml
youbot_kinematics/src/: youbot_chain.cpp
(+5 files in other folders)
